Update Edit Post, Regist User, Paginate post, user in Admin